<resources>
    <string name="app_name">ProyectoMovil</string>
    <string name="txt_user">User name</string>
    <string name="txt_password">Password</string>
    <string name="btn_sign_in">LOGIN</string>
    <string name="btn_sign_up">REGISTER NOW</string>
    <string name="txt_names">Names</string>
    <string name="txt_last_names">Last Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_politics">Aceppt politics of <b>Habeas Data</b></string>
    <string name="txt_view_politics">Es requisito necesario para la adquisición de los productos que se ofrecen en este sitio, que lea y acepte los siguientes Términos y Condiciones que a continuación se redactan. El uso de nuestros servicios así como la compra de nuestros productos implicará que usted ha leído y aceptado los Términos y Condiciones de Uso en el presente documento. Todas los productos  que son ofrecidos por nuestro sitio web pudieran ser creadas, cobradas, enviadas o presentadas por una página web tercera y en tal caso estarían sujetas a sus propios Términos y Condiciones. En algunos casos, para adquirir un producto, será necesario el registro por parte del usuario, con ingreso de datos personales fidedignos y definición de una contraseña.
El usuario puede elegir y cambiar la clave para su acceso de administración de la cuenta en cualquier momento, en caso de que se haya registrado y que sea necesario para la compra de alguno de nuestros productos.  no asume la responsabilidad en caso de que entregue dicha clave a terceros.
Todas las compras y transacciones que se lleven a cabo por medio de este sitio web, están sujetas a un proceso de confirmación y verificación, el cual podría incluir la verificación del stock y disponibilidad de producto, validación de la forma de pago, validación de la factura (en caso de existir) y el cumplimiento de las condiciones requeridas por el medio de pago seleccionado. En algunos casos puede que se requiera una verificación por medio de correo electrónico.</string>
    <string name="txt_return">I Agree</string>
    <string name="txt_successful">Successful Registration</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_title">Virtual Agency</string>

    <string name="menu_vehicles">Vehicles</string>
    <string name="menu_parts">Parts</string>
    <string name="menu_support">Support and Service</string>
    <string name="menu_workshops">Workshops</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txt_name">Name</string>
    <string name="txt_line">Line</string>
    <string name="txt_model">Model</string>
    <string name="txt_mileage">Mileage</string>
    <string name="txt_cylinder">Cylinder</string>
    <string name="txt_price">Price</string>

    <string name="btn_view_more">View More</string>
    <string name="btn_quote">Quote</string>


</resources>