<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vehicles"
            android:icon="@drawable/ic_baseline_directions_car_24"
            android:title="@string/menu_vehicles" />
        <item
            android:id="@+id/nav_parts"
            android:icon="@drawable/ic_baseline_build_24"
            android:title="@string/menu_parts" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_baseline_engineering_24"
            android:title="@string/menu_support" />
        <item
            android:id="@+id/nav_workshops"
            android:icon="@drawable/ic_baseline_account_balance_24"
            android:title="@string/menu_workshops" />
    </group>
</menu>