<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@color/teal_200"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="80"
        android:padding="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:layout_weight="20">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_names"
                android:inputType="text"
                style="@style/MyEditText">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_register_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:layout_weight="20">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_last_names"
                android:inputType="text"
                style="@style/MyEditText">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:layout_weight="20">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"
            style="@style/MyEditText">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:layout_weight="20">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            style="@style/MyEditText">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10">

        <CheckBox
            android:id="@+id/chk_politics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:text="@string/txt_politics"></CheckBox>

        <!--<TextView
            android:id="@+id/txt_politics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:linksClickable="true"
            android:textSize="16dp"
            android:textColorLink="@color/color_blue"></TextView>-->

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="10"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:enabled="false"
            style="@style/MyButton"></Button>
        
    </LinearLayout>
    
</LinearLayout>